# projeto_livraria

backend/: pyproject.toml  requirements.txt
backend/app/: settings.py  urls.py
backend/livraria/: admin.py  models.py  views.py
backend/livraria/migrations/: 0001_initial.py  0002_rename_category_categoria.py  0003_autor_livros.py  0004_remove_livros_autor_livros_autores_livros_preco_and_more.py  0005_compra.py  0006_alter_compra_options_itenscompra.py
backend/livraria/serializers/: autor.py  categoria.py  compra.py  editora.py  itens_compra.py  livro.py
backend/livraria/views/: autor.py  categoria.py  compra.py  editora.py  livro.py
